--- a/index.html
+++ b/index.html
@@ -3,39 +3,39 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>ワンクリック詐欺体験</title>
+    <title>Ace creative</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
   </head>
   <body>
-    <div id="notification" class="notification" style="position: fixed; z-index: 1; width: 100%;">
+    <!--<div id="notification" class="notification" style="position: fixed; z-index: 1; width: 100%;">
       <button id="delete" class="delete"></button>
       ※これは詐欺体験のためのページであり、請求内容は架空のものです。
-    </div>
+    </div>-->
     <section class="hero is-warning">
       <div class="hero-body">
         <div class="container">
           <div class="notification is-primary">
-            <p>写真を撮影しました</p>
+            <p>住所を特定しました</p>
           </div>
-          <h1 class="title is-size-1">登録完了</h1>
-          <p class="is-size-4">お客様の会員登録が正常に完了しました。</p>
-          <p class="is-size-4 has-text-danger">期限内に<span class="is-size-3 has-text-weight-bold">98,000円</span>お支払い下さい。</p>
+          <h1 class="title is-size-1">加入完了</h1>
+          <p class="is-size-4">クランへの加入が、正常に完了しました。</p>
+          <p class="is-size-4 has-text-danger">退会する場合、<span class="is-size-3 has-text-weight-bold">5,000円</span>お支払い下さい。</p>
           <div class="notification is-danger">
             <p class="is-size-3 has-text-centered">
               残り
-              <span id="hour">6</span>時間
+              <span id="hour">24</span>時間
               <span id="min">0</span>分
               <span id="sec">0</span>秒
             </p>
             <progress class="progress" max="100"></progress>
           </div>
-          <p class="has-text-danger">お支払いが確認できない場合は<span class="has-text-weight-bold">法的処置</span>をとらせていただきますのでご注意下さい。</p>
+          <p class="has-text-danger">お支払いが確認できない場合は、<span class="has-text-weight-bold">あなたの携帯電話に電話</span>させていただきますので、ご注意下さい。<br>(あなたの親の電話番号も、把握しています。)</p>
         </div>
       </div>
     </section>
     <section class="section">
       <div class="container">
-        <h2 class="title">お客様情報</h2>
+        <h2 class="title">情報</h2>
         <table class="table is-striped is-fullwidth">
           <tr>
             <td>端末情報</td>
@@ -54,26 +54,7 @@
           </tr>
           <tr>
             <td>メールアドレス</td>
-            <td>info@example.com</td>
-          </tr>
-        </table>
-        <h2 class="title">お振込先</h2>
-        <table class="table is-striped is-fullwidth">
-          <tr>
-            <td>銀行名（銀行コード）</td>
-            <td>極道銀行（5910）</td>
-          </tr>
-          <tr>
-            <td>支店名（支店コード）</td>
-            <td>八草支店（893）</td>
-          </tr>
-          <tr>
-            <td>種別</td>
-            <td>普通預金</td>
-          </tr>
-          <tr>
-            <td>口座番号</td>
-            <td>5910696</td>
+            <td>acecreative.jp@gmail.com</td>
           </tr>
         </table>
       </div>
@@ -85,11 +66,7 @@
       // $(window).on('popstate', function(){
       //   history.go(1);
       // });
-      const se = new Audio(
-        "https://dl.dropbox.com/s/pjf5iswhy43fc1f/camera-shutter3.mp3"
-      );
-      se.play();
-      let c = 6 * 60 * 60;
+      let c = 24 * 60 * 60;
       setInterval(() => {
         $("#hour").text(Math.floor(c / 3600));
         $("#min").text(Math.floor((c % 3600) / 60));
